# chip8-emulator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: audio.c  audio.h  chip8.c  common.h  cpu.c  cpu.h  ui.c  ui.h
